--- a/praca_magisterska.ipynb
+++ b/praca_magisterska.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "fb3a0fee",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import arff\n",
     "import torch\n",
     "\n",
     "from datasets import load_dataset\n",
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "f64c2e07",
    "metadata": {},
    "outputs": [],
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "2a915938",
    "metadata": {},
    "outputs": [],
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "169b0c38",
    "metadata": {},
    "outputs": [
@@ -206,8 +205,8 @@
        "</div>"
       ],
       "text/plain": [
-       "      index    id                                             prompt  \\\n",
-       "0         0     0  Create three film reviews about the same film....   \n",
+       "      index    id                                             prompt   \n",
+       "0         0     0  Create three film reviews about the same film....  \\\n",
        "1         1     1  Create three film reviews about the same film....   \n",
        "2         2     2  Create three film reviews about the same film....   \n",
        "3         3     3  Create three film reviews about the same film....   \n",
@@ -219,8 +218,8 @@
        "4910   5297  5297  Create three film reviews about the same film....   \n",
        "4911   5298  5298  Create three film reviews about the same film....   \n",
        "\n",
-       "                                            chatgpt_out  \\\n",
-       "0     ['The movie had a lot of potential, but the CG...   \n",
+       "                                            chatgpt_out   \n",
+       "0     ['The movie had a lot of potential, but the CG...  \\\n",
        "1     ['The film was so badly shot that I wondered i...   \n",
        "2     ['The film had potential, but unfortunately th...   \n",
        "3     ['The film had a great potential, but unfortun...   \n",
@@ -232,8 +231,8 @@
        "4910  ['This film was a complete bore. The plot was ...   \n",
        "4911  ['The acting in this film was abysmal. Every l...   \n",
        "\n",
-       "                                                review1  \\\n",
-       "0     The movie had a lot of potential, but the CGI ...   \n",
+       "                                                review1   \n",
+       "0     The movie had a lot of potential, but the CGI ...  \\\n",
        "1     The film was so badly shot that I wondered if ...   \n",
        "2     The film had potential, but unfortunately the ...   \n",
        "3     The film had a great potential, but unfortunat...   \n",
@@ -245,8 +244,8 @@
        "4910  This film was a complete bore. The plot was un...   \n",
        "4911  The acting in this film was abysmal. Every lin...   \n",
        "\n",
-       "                                                review2  \\\n",
-       "0     The CGI effects in this movie were a complete ...   \n",
+       "                                                review2   \n",
+       "0     The CGI effects in this movie were a complete ...  \\\n",
        "1     The cinematographer of this film must have bee...   \n",
        "2     I was really disappointed with this film. The ...   \n",
        "3     The pacing of the film was painfully slow, and...   \n",
@@ -274,7 +273,7 @@
        "[4912 rows x 7 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "8ba39283",
    "metadata": {},
    "outputs": [],
@@ -296,6 +295,17 @@
     "review_list_synth.extend(df_synth['review3'].values.tolist())\n",
     "\n",
     "labels_synth = [0 for x in range(len(review_list_synth))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bffa92e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_synth_list = pd.DataFrame({\"text\" : review_list_synth, \"label\" : labels_synth})\n",
+    "df_synth_list.to_csv(\"./data/negative_reviews.csv\", sep=\";\")"
    ]
   },
   {
