Prepares functions for experiments on server

--- a/helper_notebooks/similar_prompt_generator.ipynb
+++ b/helper_notebooks/similar_prompt_generator.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "2012f48d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/erthax/Programming/MAGISTERKA/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from datasets import load_dataset\n",
@@ -25,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "8745f41e",
    "metadata": {},
    "outputs": [
@@ -44,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "4260f2ae",
    "metadata": {},
    "outputs": [],
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "c4543ee1",
    "metadata": {},
    "outputs": [],
@@ -64,120 +55,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "9fb53803",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>I rented I AM CURIOUS-YELLOW from my video sto...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>\"I Am Curious: Yellow\" is a risible and preten...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>If only to avoid making this type of film in t...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>This film was probably inspired by Godard's Ma...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Oh, brother...after hearing about this ridicul...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1245</th>\n",
-       "      <td>Walerian Borowczyks La Bete (1975) was obvious...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1246</th>\n",
-       "      <td>Another variation and improvisation on the fam...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1247</th>\n",
-       "      <td>this movie had a fairly good sounding plot, bu...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1248</th>\n",
-       "      <td>This, and Immoral Tales, both left a bad taste...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1249</th>\n",
-       "      <td>This movie is little more than poorly-made, fe...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1250 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                   text  label\n",
-       "0     I rented I AM CURIOUS-YELLOW from my video sto...      0\n",
-       "1     \"I Am Curious: Yellow\" is a risible and preten...      0\n",
-       "2     If only to avoid making this type of film in t...      0\n",
-       "3     This film was probably inspired by Godard's Ma...      0\n",
-       "4     Oh, brother...after hearing about this ridicul...      0\n",
-       "...                                                 ...    ...\n",
-       "1245  Walerian Borowczyks La Bete (1975) was obvious...      0\n",
-       "1246  Another variation and improvisation on the fam...      0\n",
-       "1247  this movie had a fairly good sounding plot, bu...      0\n",
-       "1248  This, and Immoral Tales, both left a bad taste...      0\n",
-       "1249  This movie is little more than poorly-made, fe...      0\n",
-       "\n",
-       "[1250 rows x 2 columns]"
+       "1250"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chosen_texts"
+    "len(chosen_texts)"
    ]
   },
   {
